--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     <h1 id="header-text">BUSINESS <br> LANDING <br> PAGE</h1>
                 </div>
                 <div class="col-sm-12 col-md-6 mt-5 mb-5">
-                    <img class="img-fluid" src="./img2.jpg" alt="header-img" id="header-img">
+                    <img class="img-fluid" src="./images/img2.jpg" alt="header-img" id="header-img">
                 </div>
             </div>     
         </main>
         <button data-target="#our-services" class="d-flex justify-content-center" style="background-color: black;" onclick="scrollToAnchor('our-services')">
-            <img src=".arrow.svg" alt="" class="arrow">
+            <img src="./images/arrow.svg" alt="" class="arrow">
         </button>
         <script>
             function scrollToAnchor(anchorId) {
@@ -63,7 +63,7 @@
         <section class="section-row" style="display: flex; justify-content: center;">
 
             <div class=" col-sm-12 col-md-4 mt-5 mb-5  mobile-view-img">
-                <img class="img-fluid" src=".img.jpg" alt="about-img" id="about-us-img">
+                <img class="img-fluid" src="./images/img.jpg" alt="about-img" id="about-us-img">
             </div>
 
             <div class="col-md-6 mt-5 mb-8 ms-5" id="right-about-us">
